# Toby

./: .gitignore  CMakeLists.txt  README.adoc  config.pb  resources.qrc  run.sh
components/: Form.qml  Main.qml  Sensor.qml
inc/: logger.h  logic.h  pcdata.h
include/: logic.h  pcinfo.h
protos/: configuration.proto  sensor.proto
qml/: main.qml
resources/: form.qml  main.qml  resources.qrc
sensor/: CMakeLists.txt  Sensor.qml  configuration.proto  main.cpp  resources.qrc  sensor.cpp  sensor.hpp
sensor/configuration/: configuration.pb.cc
server/: CMakeLists.txt  Sensor.qml  client.py  main.cpp  sensor.cpp  sensor.hpp  sensor_pb2.py  sensor_pb2_grpc.py  server.py
server/conf/: configuration.pb.cc  configuration.pb.h
sources/: logic.cpp  main.cpp  pcinfo.cpp
src/: logger.cpp  logic.cpp  main.cpp  pcdata.cpp  pcinfo.cpp
